--- a/app/assets/stylesheets/specific/onboarding.sass
+++ b/app/assets/stylesheets/specific/onboarding.sass
@@ -35,9 +35,11 @@
 .onboarding--top-menu
   display: flex
   align-items: center
-  background-color: $header-bg-color
+  background-color:      $header-bg-color
+  background-color: var(--header-bg-color)
   height: $header-height
-  border-bottom: $header-border-bottom-width solid $header-border-bottom-color
+  border-bottom: $header-border-bottom-width solid      $header-border-bottom-color
+  border-bottom: $header-border-bottom-width solid var(--header-border-bottom-color)
 
   .avatar,
   .icon-context
