--- a/app/views/custom_fields/_form.html.erb
+++ b/app/views/custom_fields/_form.html.erb
@@ -69,13 +69,12 @@ See doc/COPYRIGHT.rdoc for more details.
 
   <div class="form--field" id="custom_field_possible_values_attributes">
     <% if @custom_field.new_record? || @custom_field.field_format == 'list' %>
-      <% possible_values = @custom_field.custom_options.map(&:value).join("\n") %>
-      <%= f.text_area :possible_values,
-                      value: possible_values,
-                      rows: 15
-      %><br>
+      <label class="form--label" title="Possible values" for="custom_field_possible_values" style="visibility: hidden;">Possible values</label>
+      <span class="form--field-container">
+        <%= render partial: "custom_fields/custom_options", locals: { custom_options: @custom_field.custom_options, f: f } %>
+      </span>
+      <a id="add-custom-option" href="#" class="form--field-extra-actions icon icon-add">Add</a>
     <% end %>
-    <span class="form--field-instructions"><%= l(:text_custom_field_possible_values_info) %></span>
   </div>
   <div id="custom_field_default_value_attributes">
     <div class="form--field" id="default_value_text">
