--- a/app/assets/stylesheets/layout/_breadcrumb.sass
+++ b/app/assets/stylesheets/layout/_breadcrumb.sass
@@ -33,9 +33,8 @@
   @include default-transition
   height: $breadcrumb-height
   overflow: hidden
-  background: none repeat scroll 0 0 $breadcrumb-bg-color
+  background: none repeat scroll 0 0 $body-background
   border: none
-  border-bottom: 1px solid $breadcrumb-border-color
   margin: 0 0 0 ($main-menu-width - $main-menu-item-border-width)
   width: auto
   overflow: hidden
@@ -48,7 +47,9 @@
     margin-left: $main-menu-folded-width
 
   a
-    @extend %breadcrumb--default-font
+    font-size: 12px
+    color: $content-link-color
+    font-weight: normal
 
   li
     @extend %breadcrumb--default-font
@@ -80,5 +81,4 @@ ul.breadcrumb
 #breadcrumb ul.breadcrumb li
   float: left
   margin: 0 0 0 10px
-  padding: 0 25px 0 0
-  background: image-url('breadcrumb-list.png') no-repeat right center
+  padding: 0
